# hive

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.offline.yml  docker-compose.yml  secrets.env.example
docs/: operations.md
plugins/web_channel/: .gitignore  Dockerfile  README.md  manifest.toml  pyproject.toml
plugins/web_channel/keycloak/: README.md  realm-swarm-local.json
plugins/web_channel/proto/: core.proto
plugins/web_channel/scripts/: gen-proto.sh
plugins/web_channel/src/web_channel/: auth.py  convlog.py  core_client.py  kc_admin.py  localusers.py  main.py  render.py
plugins/web_channel/src/web_channel/static/: app.css  dashboard.js
plugins/web_channel/src/web_channel/templates/: _activity.html  _answer.html  _deliberation.html  _hits.html  _neighborhood.html  _post.html  _status_tile.html  admin.html  base.html  dashboard.html  home.html  index.html  login.html  login_local.html
plugins/web_channel/tests/: conftest.py  test_app.py  test_app_p1.py  test_auth.py  test_contract.py  test_convlog.py  test_dashboard.py  test_dashboard_views.py  test_integration_kc.py  test_login.py  test_render.py
scripts/: answerability_lift.exs  calibrate.exs  cognitive_loop.exs  conf_paginate_diag.exs  conn_2source_slice.exs  deploy.sh  env.sh  er_validate.exs  ew_validate.exs  ingest_prod.exs  mirror-to-local-registry.sh  paraphrase_recall.exs  recall_by_scope.exs  rrf_ablation.exs  soak.sh  spike_activate.exs  spike_converge.exs  spike_extract_quality.exs  spike_loop.exs  spike_measure.exs  spike_wipe.sh  structure_check.exs
(+9 files in other folders)
