[project]
name = "web-channel"
version = "0.1.0"
description = "Swarm web_channel — a FastAPI/HTMX operator console over the Core API. Renders and accepts input; holds no cognition."
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "jinja2>=3.1",
    "python-multipart>=0.0.12",
    "grpcio>=1.68",
    "protobuf>=5.28",
]

[dependency-groups]
dev = [
    "grpcio-tools>=1.68",
    "ruff>=0.8",
    "ty>=0.0.1a1",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/web_channel"]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]
extend-exclude = ["src/web_channel/_gen"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ty.environment]
python-version = "3.13"

[tool.ty.src]
exclude = ["src/web_channel/_gen"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = ["integration: hits a live kernel Core API; excluded by default"]
addopts = "-m 'not integration'"
